--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,5 @@
-h1,
 h2 {
-  color: #30406a;
+  color: #22374b;
   font-family: Helvitica, sans-serif;
 }
 p {
@@ -8,7 +7,7 @@ p {
   color: darkslategray;
 }
 body {
-  padding: 10px;
+  background-color: rgb(255, 0, 0);
 }
 
 .fAccordhead img {
@@ -18,4 +17,21 @@ body {
   display: flex;
   column-gap: 10px;
   justify-content: space-between;
+}
+
+#topBanner {
+  width: 100%;
+  top: 0;
+  padding: 10px 16px;
+  z-index: 2;
+  position: sticky;
+  background-color: rgb(7, 41, 72);
+}
+
+#bannerText {
+  color: white;
+  padding: 5px;
+}
+#hl {
+  background-color: rgba(255, 255, 255, 0.455);
 }
